// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a large varient 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 2.25rem;
  line-height: 3rem;
  margin-bottom: 2rem;
}

<h1
  class="emotion-0"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1.75rem;
  line-height: 2.25rem;
  margin-bottom: 1.5rem;
}

<h1
  class="emotion-0"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;

exports[`renders the component h3 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1.75rem;
  line-height: 2.25rem;
  margin-bottom: 1.5rem;
}

<h3
  class="emotion-0"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h3>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1.75rem;
  line-height: 2.25rem;
  margin-bottom: 1.5rem;
}

<h1
  class="my-extra-class emotion-0"
  data-test-id="cf-ui-display-text"
>
  DisplayText
</h1>
`;
